# gnu-readline-sys

./: COPYRIGHT  Cargo.toml  README.md  build.rs
bindgen/: bindgen.h  bindgen.sh
misc/: crate-readme.md
src/: bindgen.rs  lib.rs
